--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <script src="{% static 'fontawesomefree/js/all.min.js' %}"></script>
         <link rel="stylesheet" type="text/css" href="{% static 'css/base.min.css' %}">
+        <script defer data-domain="wbi.fourfridays.com" src="https://analytics.fourfridays.com/js/plausible.js"></script>
         {% block head-extra %}{% endblock head-extra %}
     </head>
 
