--- a/templates/base.html
+++ b/templates/base.html
@@ -4,49 +4,59 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8" />
-        <title>
-            {% block title %}{% if page.seo_title %}{{ page.seo_title }}{% else %}{{ page.title }}{% endif %}{% endblock %}{% block title_suffix %}{% if current_site and current_site.site_name %} | {{ current_site.site_name }}{% endif %}{% endblock %}
-        </title>
-        {% if self.search_description %}<meta name="description" content="{{ self.search_description }}" />{% endif %}
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        {% block extra_meta %}{% endblock %}
+<!--[if gt IE 8]><!-->
+<html class="no-js" lang="en"> <!--<![endif]-->
 
-        {% if self.seo_title == 'Home' %}<link rel="canonical" href="{{ page.full_url }}" />{% endif %}
+<head>
+    <meta charset="utf-8" />
+    <title>
+        {% block title %}{% if page.seo_title %}{{ page.seo_title }}{% else %}{{ page.title }}{% endif %}{% endblock
+        %}{% block title_suffix %}{% if current_site and current_site.site_name %} | {{ current_site.site_name }}{%
+        endif %}{% endblock %}
+    </title>
+    {% if self.search_description %}
+    <meta name="description" content="{{ self.search_description }}" />{% endif %}
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    {% block extra_meta %}{% endblock %}
 
-        {# Global stylesheets #}
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-        <script src="{% static 'fontawesomefree/js/all.min.js' %}"></script>
-        <link rel="stylesheet" type="text/css" href="{% static 'css/base.min.css' %}">
-        <script defer data-domain="wbi.fourfridays.com" src="https://analytics.fourfridays.com/js/plausible.js"></script>
-        {% block head-extra %}{% endblock head-extra %}
-    </head>
+    {% if self.seo_title == 'Home' %}
+    <link rel="canonical" href="{{ page.full_url }}" />{% endif %}
 
-    <body class="{% block body_class %}template-{{ self.get_verbose_name|slugify }}{% endblock %}">
-        {% wagtailuserbar %}
+    {# Global stylesheets #}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <script src="{% static 'fontawesomefree/js/all.min.js' %}"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/base.min.css' %}">
+    <script defer data-domain="wbi.fourfridays.com" src="https://analytics.fourfridays.com/js/plausible.js"></script>
+    {% block head-extra %}{% endblock head-extra %}
+</head>
 
-        <header>
-            {% block header %}
-                {# Header contains the main_navigation block #}
-                {% include "includes/header.html" with parent=site_root calling_page=self %}
-            {% endblock header %}
-        </header>
+<body class="{% block body_class %}template-{{ self.get_verbose_name|slugify }}{% endblock %}">
+    {% wagtailuserbar %}
 
-        <main class="my-4" role="main">
-            {% block content %}{% endblock content %}
-        </main>
+    <header>
+        {% block header %}
+        {# Header contains the main_navigation block #}
+        {% include "includes/header.html" with parent=site_root calling_page=self %}
+        {% endblock header %}
+    </header>
 
-        <!-- Footer -->
-        <footer class="py-2 mt-4">
-            {% include "includes/footer.html" %}
-        </footer>
+    <main class="my-4" role="main">
+        {% block content %}{% endblock content %}
+    </main>
 
-        {# Global javascript #}
-        <script type="text/javascript" src="{% static 'js/base.min.js' %}" async></script>
+    <!-- Footer -->
+    <footer class="py-2 mt-4">
+        {% include "includes/footer.html" %}
+    </footer>
 
-        {% block extra_js %}{% endblock %}
-    </body>
+    {# Global javascript #}
+    <script type="text/javascript" src="{% static 'js/base.min.js' %}" async></script>
+
+    {% block extra_js %}{% endblock %}
+</body>
+
 </html>
