--- a/templates/blocks/icon_block.html
+++ b/templates/blocks/icon_block.html
@@ -1,3 +1,4 @@
 <div class="icon text-center text-sm-{{ self.alignment }}">
-    <i class="{% if self.font_awesome_icon_choice == 'brand' %}fab{% elif self.font_awesome_icon_choice == 'solid' %}fas{% elif self.font_awesome_icon_choice == 'regular' %}far{% elif self.font_awesome_icon_choice == 'light' %}fal{% endif %} fa-{{ self.name }} {% if self.size %}fa-{{ self.size }}{% endif %}" aria-hidden="true"></i>
+    <i class="{% if self.font_awesome_icon_choice == 'brand' %}fab{% elif self.font_awesome_icon_choice == 'solid' %}fas{% elif self.font_awesome_icon_choice == 'regular' %}far{% elif self.font_awesome_icon_choice == 'light' %}fal{% endif %} fa-{{ self.name }} {% if self.size %}fa-{{ self.size }}{% endif %}"
+        aria-hidden="true"></i>
 </div>
