--- a/templates/tags/top_menu.html
+++ b/templates/tags/top_menu.html
@@ -6,7 +6,7 @@
           <a class="nav-link dropdown-toggle" href="#" id="{{ menuitem.title|lower|cut:' ' }}-navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ menuitem.title }}</a>
               {% top_menu_children parent=menuitem %}
       {% else %}
-          <a class="nav-link" href="{% pageurl menuitem %}" role="menuitem">{{ menuitem.title }} <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="{% pageurl menuitem %}" role="menuitem">{{ menuitem.title }} <span class="visually-hidden">(current)</span></a>
       {% endif %}
     </li>
 {% endfor %}
