--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,8 @@
 
         {% if self.seo_title == 'Home' %}<link rel="canonical" href="{{ page.full_url }}" />{% endif %}
 
+        <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
+
         {# Global stylesheets #}
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" crossorigin="anonymous" media="none" onload="media='all'"><noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" crossorigin="anonymous"></noscript>
 
