article template touch-ups

--- a/templates/article/article_page.html
+++ b/templates/article/article_page.html
@@ -14,7 +14,7 @@
         </figure>
     </div>
 
-    <div class="container mt-5 mb-5">
+    <div class="container my-3">
         <div class="text-center">
             <h1>{{ self.title }}</h1>
             <p>{{ self.date_published }}</p>
