--- a/templates/article/article_index_page.html
+++ b/templates/article/article_index_page.html
@@ -10,7 +10,7 @@
                 <div class="col-sm-3">
                     {% image post.article_image fill-250x250 as article_img %}
                     <a href="{{ post.url }}">
-                        <img src="{{ article_img.url }}" alt="{{ article_img.alt }}">
+                        <img class="img-fluid" src="{{ article_img.url }}" alt="{{ article_img.alt }}">
                     </a>
                 </div>
                 <div class="col-sm-9">
