--- a/templates/base.html
+++ b/templates/base.html
@@ -4,50 +4,61 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8" />
-        <title>
-            {% block title %}{% if page.seo_title %}{{ page.seo_title }}{% else %}{{ page.title }}{% endif %}{% endblock %}{% block title_suffix %}{% if current_site and current_site.site_name %} | {{ current_site.site_name }}{% endif %}{% endblock %}
-        </title>
-        {% if self.search_description %}<meta name="description" content="{{ self.search_description }}" />{% endif %}
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        {% block extra_meta %}{% endblock %}
+<!--[if gt IE 8]><!-->
+<html class="no-js" lang="en"> <!--<![endif]-->
 
-        {% if self.seo_title == 'Home' %}<link rel="canonical" href="{{ page.full_url }}" />{% endif %}
+<head>
+    <meta charset="utf-8" />
+    <title>
+        {% block title %}{% if page.seo_title %}{{ page.seo_title }}{% else %}{{ page.title }}{% endif %}{% endblock
+        %}{% block title_suffix %}{% if current_site and current_site.site_name %} | {{ current_site.site_name }}{%
+        endif %}{% endblock %}
+    </title>
+    {% if self.search_description %}
+    <meta name="description" content="{{ self.search_description }}" />{% endif %}
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    {% block extra_meta %}{% endblock %}
 
-        <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
+    {% if self.seo_title == 'Home' %}
+    <link rel="canonical" href="{{ page.full_url }}" />{% endif %}
 
-        {# Global stylesheets #}
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-        
-        <link rel="stylesheet" type="text/css" href="{% static 'css/base.min.css' %}" media="none" onload="media='all'"><noscript><link rel="stylesheet" type="text/css" href="{% static 'css/base.min.css' %}"></noscript
-        {% block head-extra %}{% endblock head-extra %}
-    </head>
+    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}" />
 
-    <body class="{% block body_class %}template-{{ self.get_verbose_name|slugify }}{% endblock %}">
-        {% wagtailuserbar %}
+    {# Global stylesheets #}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 
-        <header>
-            {% block header %}
-                {# Header contains the main_navigation block #}
-                {% include "includes/header.html" with parent=site_root calling_page=self %}
-            {% endblock header %}
-        </header>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/base.min.css' %}" media="none" onload="media='all'">
+    <noscript>
+        <link rel="stylesheet" type="text/css" href="{% static 'css/base.min.css' %}">
+    </noscript {% block head-extra %}{% endblock head-extra %} </head>
 
-        <main class="my-4" role="main">
-            {% block content %}{% endblock content %}
-        </main>
+<body class="{% block body_class %}template-{{ self.get_verbose_name|slugify }}{% endblock %}">
+    {% wagtailuserbar %}
 
-        <!-- Footer -->
-        <footer class="py-2 mt-4">
-            {% include "includes/footer.html" %}
-        </footer>
+    <header>
+        {% block header %}
+        {# Header contains the main_navigation block #}
+        {% include "includes/header.html" with parent=site_root calling_page=self %}
+        {% endblock header %}
+    </header>
 
-        {# Global javascript #}
-        <script type="text/javascript" src="{% static 'js/base.min.js' %}" async></script>
+    <main class="my-4" role="main">
+        {% block content %}{% endblock content %}
+    </main>
 
-        {% block extra_js %}{% endblock %}
-    </body>
+    <!-- Footer -->
+    <footer class="py-2 mt-4">
+        {% include "includes/footer.html" %}
+    </footer>
+
+    {# Global javascript #}
+    <script type="text/javascript" src="{% static 'js/base.min.js' %}" async></script>
+
+    {% block extra_js %}{% endblock %}
+</body>
+
 </html>
