--- a/templates/base.html
+++ b/templates/base.html
@@ -10,9 +10,8 @@
 <head>
     <meta charset="utf-8" />
     <title>
-        {% block title %}{% if page.seo_title %}{{ page.seo_title }}{% else %}{{ page.title }}{% endif %}{% endblock
-        %}{% block title_suffix %}{% if current_site and current_site.site_name %} | {{ current_site.site_name }}{%
-        endif %}{% endblock %}
+        {% block title %}{% if page.seo_title %}{{ page.seo_title }}{% else %}{{ page.title }}{% endif %}{% endblock %}
+        {% block title_suffix %}{% if current_site and current_site.site_name %} | {{ current_site.site_name }}{% endif %}{% endblock %}
     </title>
     {% if self.search_description %}
     <meta name="description" content="{{ self.search_description }}" />{% endif %}
